--- a/README
+++ b/README
@@ -65,5 +65,26 @@
    <type>jar</type>
    <scope>compile</scope>
   </dependency>
-  
+3. Add surefire-plugins 
+i<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+   		<includes>
+                <include>**/*Test.java</include>
+                </includes>
+          <systemProperties>
+            <property>
+              <name>username</name>
+              <value>${username}</value>
+            </property>
+        	<property>
+              <name>password</name>
+              <value>${password}</value>
+            </property>
+		</systemProperties>
+        </configuration>
+      </plugin>
+4. run command : mvn clean compile test -Dusername="username without @gmail.com" -Dpassword="password"
 -= Installation Guild =-
